# Solana-math-stuff

./: package-lock.json  package.json
src/client/: math.ts  sum.ts  util.ts
src/square/: Cargo.toml
src/square/src/: lib.rs
src/sum/: Cargo.toml
src/sum/src/: lib.rs
